--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>My Off-White Blog</title>
+  <title>Muhammad Mahdi</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/responsive.css">
   <script defer src="/js/main.js"></script>
