--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <section class="home-section">
       <div class="section-head">
         <h2>My Courses</h2>
+        <a class="view-all" href="/courses.html">View all →</a>
       </div>
       <div class="card-grid">
         <!-- cards include images; use image files in /images -->
@@ -28,30 +29,34 @@
         <article class="card"><img src="/images/img2.svg" alt=""><div class="card-body"><h3>Course 2</h3><p class="excerpt">Short intro to Course 2.</p><a class="read-more" href="/courses/course-002.html">Read more →</a></div></article>
         <article class="card"><img src="/images/img3.svg" alt=""><div class="card-body"><h3>Course 3</h3><p class="excerpt">Short intro to Course 3.</p><a class="read-more" href="/courses/course-003.html">Read more →</a></div></article>
       </div>
-      <!-- View All is visible on desktop and mobile per prompt -->
-      <a class="view-all" href="/courses.html">View all →</a>
     </section>
 
     <!-- My Services -->
     <section class="home-section">
-      <div class="section-head"><h2>My Services</h2></div>
+      <div class="section-head">
+        <h2>My Services</h2>
+        <a class="view-all" href="/services.html">View all →</a>
+      </div>
       <div class="card-grid">
         <article class="card"><img src="/images/img4.svg" alt=""><div class="card-body"><h3>Service 1</h3><p class="excerpt">Short intro to Service 1.</p><a class="read-more" href="/services/service-001.html">Read more →</a></div></article>
         <article class="card"><img src="/images/img5.svg" alt=""><div class="card-body"><h3>Service 2</h3><p class="excerpt">Short intro to Service 2.</p><a class="read-more" href="/services/service-002.html">Read more →</a></div></article>
         <article class="card"><img src="/images/img6.svg" alt=""><div class="card-body"><h3>Service 3</h3><p class="excerpt">Short intro to Service 3.</p><a class="read-more" href="/services/service-003.html">Read more →</a></div></article>
       </div>
-      <a class="view-all" href="/services.html">View all →</a>
+      
     </section>
 
     <!-- My Posts -->
     <section class="home-section">
-      <div class="section-head"><h2>My Posts</h2></div>
+      <div class="section-head">
+        <h2>My Posts</h2>
+        <a class="view-all" href="/posts.html">View all →</a>
+      </div>
       <div class="card-grid">
         <article class="card"><img src="/images/img7.svg" alt=""><div class="card-body"><h3>Post 1</h3><p class="meta">Jan 1, 2025</p><p class="excerpt">Excerpt for post 1.</p><a class="read-more" href="/posts/post-001.html">Read more →</a></div></article>
         <article class="card"><img src="/images/img8.svg" alt=""><div class="card-body"><h3>Post 2</h3><p class="meta">Jan 5, 2025</p><p class="excerpt">Excerpt for post 2.</p><a class="read-more" href="/posts/post-002.html">Read more →</a></div></article>
         <article class="card"><img src="/images/img9.svg" alt=""><div class="card-body"><h3>Post 3</h3><p class="meta">Jan 10, 2025</p><p class="excerpt">Excerpt for post 3.</p><a class="read-more" href="/posts/post-003.html">Read more →</a></div></article>
       </div>
-      <a class="view-all" href="/posts.html">View all →</a>
+      
     </section>
   </main>
 
