fixed pagination links

--- a/courses.html
+++ b/courses.html
@@ -71,8 +71,8 @@
     </article>
   </div>
   <div class='pagination'>
-    <a class='active' href='courses.html'>1</a>
-    <a href='courses-page2.html'>2</a>
+    <a class='active' href='/courses.html'>1</a>
+    <a href='/pages/courses-page2.html'>2</a>
   </div>
 </main>
 
