--- a/posts.html
+++ b/posts.html
@@ -71,8 +71,8 @@
     </article>
   </div>
   <div class='pagination'>
-    <a class='active' href='posts.html'>1</a>
-    <a href='posts-page2.html'>2</a>
+    <a class='active' href='/posts.html'>1</a>
+    <a href='/pages/posts-page2.html'>2</a>
   </div>
 </main>
 
