--- a/services.html
+++ b/services.html
@@ -71,8 +71,8 @@
     </article>
   </div>
   <div class='pagination'>
-    <a class='active' href='services.html'>1</a>
-    <a href='services-page2.html'>2</a>
+    <a class='active' href='/services.html'>1</a>
+    <a href='/pages/services-page2.html'>2</a>
   </div>
 </main>
 
