next page button added and pagination links fixed

--- a/courses.html
+++ b/courses.html
@@ -73,6 +73,7 @@
   <div class='pagination'>
     <a class='active' href='/courses.html'>1</a>
     <a href='/pages/courses-page2.html'>2</a>
+    <a href='/pages/courses-page2.html'>Next &raquo;</a>
   </div>
 </main>
 
