--- a/pages/posts-page2.html
+++ b/pages/posts-page2.html
@@ -26,9 +26,9 @@
     </article>
   </div>
   <div class='pagination'>
-    <a href='posts.html'>&laquo; Previous</a>
-    <a href='posts.html'>1</a>
-    <a class='active' href='posts-page2.html'>2</a>
+    <a href='/posts.html'>&laquo; Previous</a>
+    <a href='/posts.html'>1</a>
+    <a class='active' href='/pages/posts-page2.html'>2</a>
   </div>
 </main>
 
