--- a/posts.html
+++ b/posts.html
@@ -73,6 +73,7 @@
   <div class='pagination'>
     <a class='active' href='/posts.html'>1</a>
     <a href='/pages/posts-page2.html'>2</a>
+    <a href='/pages/posts-page2.html'>Next &raquo;</a>
   </div>
 </main>
 
