--- a/services.html
+++ b/services.html
@@ -73,6 +73,7 @@
   <div class='pagination'>
     <a class='active' href='/services.html'>1</a>
     <a href='/pages/services-page2.html'>2</a>
+    <a href='/pages/services-page2.html'>Next &raquo;</a>
   </div>
 </main>
 
