--- a/pages/courses-page2.html
+++ b/pages/courses-page2.html
@@ -26,8 +26,8 @@
     </article>
   </div>
   <div class='pagination'>
-    <a href='/courses.html'>&laquo; Previous</a>
-    <a href='/courses.html'>1</a>
+    <a href='../courses.html'>&laquo; Previous</a>
+    <a href='../courses.html'>1</a>
     <a class='active' href='/pages/courses-page2.html'>2</a>
   </div>
 </main>
