--- a/pages/services-page2.html
+++ b/pages/services-page2.html
@@ -26,8 +26,8 @@
     </article>
   </div>
   <div class='pagination'>
-    <a href='/services.html'>&laquo; Previous</a>
-    <a href='/services.html'>1</a>
+    <a href='../services.html'>&laquo; Previous</a>
+    <a href='../services.html'>1</a>
     <a class='active' href='/pages/services-page2.html'>2</a>
   </div>
 </main>
