site content modified

--- a/public/courses/course-005/index.html
+++ b/public/courses/course-005/index.html
@@ -35,7 +35,7 @@
     <h1>Course 005 — Coming Soon</h1>
     <p class="meta">Jan 20, 2025</p>
     
-      <img src="/images/img5.svg" alt="" style="width:100%;max-height:360px;object-fit:cover;margin-bottom:12px;">
+      <img src="/images/upcoming-course.svg" alt="" style="width:100%;max-height:360px;object-fit:cover;margin-bottom:12px;">
     
     <div class="content">
       <p>Full post content here&hellip;</p>
@@ -59,7 +59,7 @@
   
 <footer class="site-footer">
   <div class="container footer-inner">
-    <p>© 2025 My Off-White Blog. All rights reserved.</p>
+    <p>© 2025 Muhammad Mahdi. All rights reserved.</p>
   </div>
 </footer>
 
