--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -79,7 +79,7 @@
   
 <footer class="site-footer">
   <div class="container footer-inner">
-    <p>© 2025 My Off-White Blog. All rights reserved.</p>
+    <p>© 2025 Muhammad Mahdi. All rights reserved.</p>
   </div>
 </footer>
 
